themes/nitpum-blog/assets/scss/modules/post/_index.scss
.post-single {
  margin: auto;
  width: 100%;
  max-width: var(--content-width);
  padding-bottom: 50px;

  header {
    
    figure {
			display: flex;
      margin: 0;

      img {
				margin: auto;
        height: auto;
      }

      @include for-desktop-up {
        svg,
        img {
          border-radius: var(--radius);
        }
      }
    }


		.read-time {
			margin-left: 8px;
		}
  }

  figure {
    margin: 0;
  }

  img {
    margin: auto;
    height: auto;
    max-width: 100%;
		
    @include for-desktop-up {
			border-radius: var(--radius);
    }
  }
	
  video {
		border: var(--border-size) solid var(--border-color);
		
    @include for-desktop-up {
      border-radius: var(--radius);
    }
  }

  .heading {
    margin: auto;
    width: 100%;
    box-sizing: border-box;
    padding-left: var(--content-side-padding);
    padding-right: var(--content-side-padding);
    max-width: var(--content-inner-width);
    margin-bottom: 28px;

    h1 {
      margin-top: 0.67em;
    }
  }

  .content {
    margin: auto;
    width: 100%;
    padding-left: var(--content-side-padding);
    padding-right: var(--content-side-padding);
    box-sizing: border-box;
    max-width: var(--content-inner-width);
    word-wrap: break-word;

    h1, h2, h3, h4, h5, h6 {
      &:hover, &:focus {
        .anchor-link {
          display: block;
        } 
      }
    }

		.anchor-link {
			position: absolute;
			margin-left: -2rem;
			padding-right: 0.5em;
			font-size: 1em;
      display: none;
		}

    img {
      filter: var(--image-filter);
    }
  }

}

.comment {
	margin: auto;
	width: 100%;
	max-width: var(--content-width);
}

